crates/swc/tests/tsc-references/subtypingWithCallSignaturesA.1.normal.js
//// [subtypingWithCallSignaturesA.ts]
var r5 = foo3(function(x) {
    return '';
}); // error
